k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basp-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: app-instance
      app.kubernetes.io/name: app
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: app-instance
        app.kubernetes.io/name: app
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      schedulerName: default-scheduler
      containers:
      - name: express-buildah-app
        image: quay.io/giusan_ibm/basp-client:1
        ports:
        - name: http
          protocol: TCP
          containerPort: 3000
        resources: {}
#        livenessProbe:
#          failureThreshold: 3
#          httpGet:
#            port: 5000
#            path: /
#            scheme: HTTP
#          periodSeconds: 10
#          successThreshold: 1
#          timeoutSeconds: 1
#        readinessProbe:
#          failureThreshold: 3
#          httpGet:
#            port: http
#            path: /
#            scheme: HTTP
#          periodSeconds: 10
#          successThreshold: 1
#          timeoutSeconds: 1
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        imagePullPolicy: IfNotPresent
      securityContext: {}
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
