k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: basp-client
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: basp-client
    weight: 100
  wildcardPolicy: None
